# PyFortLearn

./: .gitignore  README.md  pyproject.toml
docs/: LinearRegressionData.csv
examples/: ex001_linear_regression.py  ex002_csv_linear_regression.py
src/: csv_linear_regression.f90  linear_regression.f90
