[tool.poetry]
name = "pyfortlearn"
version = "0.1.0"
description = "O projeto PyFortStat é uma biblioteca estatística destinada a combinar a flexibilidade do Python com a eficiência computacional do Fortran para oferecer uma ferramenta poderosa focada em aplicações de machine learning. O objetivo é proporcionar uma interface amigável em Python que permita aos usuários acessar rotinas de cálculo estatístico de alto desempenho escritas em Fortran, garantindo rapidez e precisão nos cálculos."
authors = ["Vicrrs <enricofermi2019@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
pytest = "^8.1.1"
sphinx = "^7.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
